--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#/welcome">Nataly Jallo</a>
+        <img src="img/foto-5.jpg" alt="" class="" style="width: 5%; border-radius: 360px; margin-right: 10px;">
+        <a class="navbar-brand js-scroll-trigger" href="#/welcome"> Nataly Jallo</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
